// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`devices/components/moduleIdentityTwin snapshot matches snapshot when no device identity is provided 1`] = `
<CollapsibleSection
  expanded={false}
  label="deviceIdentity.authenticationType.sasToken.label"
  tooltipText="deviceIdentity.authenticationType.sasToken.toolTip"
>
  <div
    className="sas-token-section"
  >
    <Field
      label="deviceIdentity.authenticationType.sasToken.symmetricKey"
      required={true}
    >
      <Dropdown
        className="sas-token-key-field"
        onOptionSelect={[Function]}
        selectedOptions={[]}
      >
        <Option
          key="null"
          value={null}
        >
          deviceIdentity.authenticationType.symmetricKey.primaryKey
        </Option>
        <Option
          key="null"
          value={null}
        >
          deviceIdentity.authenticationType.symmetricKey.secondaryKey
        </Option>
      </Dropdown>
    </Field>
    <Field
      label="deviceIdentity.authenticationType.sasToken.expiration"
    >
      <SpinButton
        className="sas-token-expiration-field"
        max={9007199254740991}
        min={0}
        onChange={[Function]}
        value={5}
      />
    </Field>
    <MaskedCopyableTextField
      allowMask={true}
      ariaLabel="deviceIdentity.authenticationType.sasToken.textField.ariaLabel"
      label="deviceIdentity.authenticationType.sasToken.textField.label"
      value=""
    />
    <Button
      appearance="primary"
      className="sas-token-generate-button"
      disabled={true}
      onClick={[Function]}
      title="deviceIdentity.authenticationType.sasToken.generateButton.title"
    >
      deviceIdentity.authenticationType.sasToken.generateButton.text
    </Button>
  </div>
</CollapsibleSection>
`;

exports[`devices/components/moduleIdentityTwin snapshot matches snapshot when no device identity is provided 2`] = `
<CollapsibleSection
  expanded={false}
  label="deviceIdentity.authenticationType.sasToken.label"
  tooltipText="deviceIdentity.authenticationType.sasToken.toolTip"
>
  <div
    className="sas-token-section"
  >
    <Field
      label="deviceIdentity.authenticationType.sasToken.symmetricKey"
      required={true}
    >
      <Dropdown
        className="sas-token-key-field"
        onOptionSelect={[Function]}
        selectedOptions={[]}
      >
        <Option
          key="mock_key_1"
          value="mock_key_1"
        >
          deviceIdentity.authenticationType.symmetricKey.primaryKey
        </Option>
        <Option
          key="mock_key_2"
          value="mock_key_2"
        >
          deviceIdentity.authenticationType.symmetricKey.secondaryKey
        </Option>
      </Dropdown>
    </Field>
    <Field
      label="deviceIdentity.authenticationType.sasToken.expiration"
    >
      <SpinButton
        className="sas-token-expiration-field"
        max={9007199254740991}
        min={0}
        onChange={[Function]}
        value={5}
      />
    </Field>
    <MaskedCopyableTextField
      allowMask={true}
      ariaLabel="deviceIdentity.authenticationType.sasToken.textField.ariaLabel"
      label="deviceIdentity.authenticationType.sasToken.textField.label"
      value=""
    />
    <Button
      appearance="primary"
      className="sas-token-generate-button"
      disabled={true}
      onClick={[Function]}
      title="deviceIdentity.authenticationType.sasToken.generateButton.title"
    >
      deviceIdentity.authenticationType.sasToken.generateButton.text
    </Button>
  </div>
</CollapsibleSection>
`;
